# pico-examples

./: .bazelrc  .gitignore  MODULE.bazel
blink/: BUILD.bazel
hello_world/serial/: BUILD.bazel
i2c/bmp280_i2c/: BUILD.bazel
i2c/bus_scan/: BUILD.bazel
i2c/ht16k33_i2c/: BUILD.bazel  ht16k33_i2c.c
i2c/lcd_1602_i2c/: BUILD.bazel  lcd_1602_i2c.c
i2c/lis3dh_i2c/: BUILD.bazel
i2c/mcp9808_i2c/: BUILD.bazel
i2c/mma8451_i2c/: BUILD.bazel
i2c/mpl3115a2_i2c/: BUILD.bazel  mpl3115a2_i2c.c
i2c/mpu6050_i2c/: BUILD.bazel
i2c/pa1010d_i2c/: BUILD.bazel
i2c/pcf8523_i2c/: BUILD.bazel
i2c/slave_mem_i2c/: BUILD.bazel
i2c/ssd1306_i2c/: BUILD.bazel  ssd1306_i2c.c
